--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -104,8 +104,8 @@
   <!-- <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/terminals">
     Điều chuyển máy POS
   </button> -->
-  <button mat-menu-item routerLink="/terminals/limit">{{ "Quản lý hạn mức POS" | translate }}</button>
-  <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals">
+  <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS, POS_UPDATE, POS_CREATE, POS_READ'" routerLink="/terminals/limit">{{ "Quản lý hạn mức POS" | translate }}</button>
+  <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS, POS_UPDATE, POS_CREATE, POS_READ'" routerLink="/terminals">
     {{ "Quản lý máy POS" | translate }}
   </button>
   <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS'" routerLink="/third-party">
