--- a/src/app/terminals/edit-terminals/edit-terminals.component.html
+++ b/src/app/terminals/edit-terminals/edit-terminals.component.html
@@ -37,7 +37,9 @@
                 <mat-error *ngIf="editTerminalForm.controls.limitAmount.hasError('required')"
                 [innerHTML]="'Terminal_Component.FormTerminal.labelRequired' |translate"></mat-error>
                 <mat-error *ngIf="editTerminalForm.controls.limitAmount.hasError('min')"
-                  [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin0' |translate"></mat-error>
+                  [innerHTML]="'Tối thiểu là 1,000,000' |translate"></mat-error>
+                <mat-error *ngIf="editTerminalForm.controls.limitAmount.hasError('max')"
+                  [innerHTML]="'Số tiền vượt hạn mức 100 Tỷ/ngày'"></mat-error>
             </mat-form-field>
 
             <mat-form-field *ngIf="editTerminalForm.contains('merchantId')" fxFlex="48%">
@@ -71,18 +73,18 @@
               </mat-select>
               <mat-error *ngIf="editTerminalForm.controls.officeId.hasError('required')"
                 [innerHTML]="'Terminal_Component.FormTerminal.labelRequired' |translate"></mat-error>
-          </mat-form-field>
+            </mat-form-field>
 
-          <mat-form-field *ngIf="editTerminalForm.contains('timeChargeValid')" fxFlex="48%">
-            <mat-label>Số lần cà/ngày</mat-label>
-            <input  matInput required formControlName="timeChargeValid">
-            <mat-error *ngIf="editTerminalForm.controls.timeChargeValid.hasError('required')"
-              [innerHTML]="'Terminal_Component.FormTerminal.labelRequired' |translate"></mat-error>
-            <mat-error *ngIf="editTerminalForm.controls.timeChargeValid.hasError('min')"
-              [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin0' |translate"></mat-error>
-              <mat-error *ngIf="editTerminalForm.controls.timeChargeValid.hasError('max')"
-                  [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMax' |translate"></mat-error>
-          </mat-form-field>
+            <mat-form-field *ngIf="editTerminalForm.contains('timeChargeValid')" fxFlex="48%">
+              <mat-label>Số lần cà/ngày</mat-label>
+              <input  matInput type="number" formControlName="timeChargeValid">
+              <mat-error *ngIf="editTerminalForm.controls.timeChargeValid.hasError('required')"
+                [innerHTML]="'Terminal_Component.FormTerminal.labelRequired' |translate"></mat-error>
+              <mat-error *ngIf="editTerminalForm.controls.timeChargeValid.hasError('min')"
+                [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin0' |translate"></mat-error>
+                <mat-error *ngIf="editTerminalForm.controls.timeChargeValid.hasError('max')"
+                    [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMax' |translate"></mat-error>
+            </mat-form-field>
 
             <mat-form-field *ngIf="editTerminalForm.contains('minFeeDefault')" fxFlex="48%">
                 <mat-label>{{'Terminal_Component.FormTerminal.labelMinFeeDefault' |translate}}</mat-label>
@@ -91,9 +93,19 @@
                   [innerHTML]="'Terminal_Component.FormTerminal.labelRequired' |translate"></mat-error>
                 <mat-error *ngIf="editTerminalForm.controls.minFeeDefault.hasError('min')"
                   [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin0' |translate"></mat-error>
+                  <mat-error *ngIf="editTerminalForm.controls.minFeeDefault.hasError('min')"
+                  [innerHTML]="'Phí phải nhỏ hơn 1,000,000'"></mat-error>
             </mat-form-field>
 
-            <mat-checkbox fxFlex="48%" labelPosition="before" formControlName="status" class="padding-fix" class="activeCheckBox">
+            <mat-form-field *ngIf="editTerminalForm.contains('typeOfTransaction')" fxFlex="25%">
+              <mat-label>Thực hiện cho giao dịch:</mat-label>
+              <mat-select  formControlName="typeOfTransaction">
+                  <mat-option *ngFor="let t of typeOfTransactions" [value]="t.value">
+                    {{ t.valueDesc }}
+                  </mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-checkbox fxFlex="20%" labelPosition="before" formControlName="status" class="padding-fix" class="activeCheckBox">
                 {{'Terminal_Component.FormTerminal.checkboxIsActive' |translate}}
             </mat-checkbox>
           </div>
@@ -141,7 +153,7 @@
             </mat-form-field>
             <mat-form-field *ngIf="editTerminalForm.contains('levelLimit')" fxFlex="10%">
                 <mat-label>{{'Terminal_Component.FormTerminal.labelLevelLimit' |translate}}</mat-label>
-                <input currencyMask matInput required formControlName="levelLimit" >
+                <input matInput required formControlName="levelLimit" >
                 <mat-error *ngIf="editTerminalForm.controls.levelLimit.hasError('min')"
                   [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin0' |translate"></mat-error>
             </mat-form-field>
@@ -153,23 +165,23 @@
               </svg>
               {{'Terminal_Component.FormTerminal.buttonSetupAll' |translate}}
             </button>
-            <div class="row">
-              <mat-form-field>
+             
+              <mat-form-field fxFlex="48%">
                 <mat-label>Chi nhánh</mat-label>
                 <mat-select [formControl]="officeSelect">
-                  <mat-option *ngFor="let o of offices" [value]="o.id">
+                  <mat-option  *ngFor="let o of offices" [value]="o.officeId">
                     {{ o.name }}
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-              <button mat-raised-button color="primary" (click)="setDefaultFeeSettingPosForOffice()">
+              <button mat-raised-button color="primary"   (click)="setDefaultFeeSettingPosForOffice()">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-in-down-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" d="M9.636 2.5a.5.5 0 0 0-.5-.5H2.5A1.5 1.5 0 0 0 1 3.5v10A1.5 1.5 0 0 0 2.5 15h10a1.5 1.5 0 0 0 1.5-1.5V6.864a.5.5 0 0 0-1 0V13.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
                   <path fill-rule="evenodd" d="M5 10.5a.5.5 0 0 0 .5.5h5a.5.5 0 0 0 0-1H6.707l8.147-8.146a.5.5 0 0 0-.708-.708L6 9.293V5.5a.5.5 0 0 0-1 0v5z"/>
                 </svg>
                 Áp dụng cho chi nhánh
               </button>
-            </div>
+             
             <button mat-raised-button (click)="reset()">
               <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-repeat" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"/>
@@ -177,25 +189,16 @@
               </svg>
               {{'Terminal_Component.FormTerminal.buttonResetDefault' |translate}}
             </button>
-            <!-- <button mat-raised-button color="primary" (click)="submit()">
-              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-shield-check" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M5.443 1.991a60.17 60.17 0 0 0-2.725.802.454.454 0 0 0-.315.366C1.87 7.056 3.1 9.9 4.567 11.773c.736.94 1.533 1.636 2.197 2.093.333.228.626.394.857.5.116.053.21.089.282.11A.73.73 0 0 0 8 14.5c.007-.001.038-.005.097-.023.072-.022.166-.058.282-.111.23-.106.525-.272.857-.5a10.197 10.197 0 0 0 2.197-2.093C12.9 9.9 14.13 7.056 13.597 3.159a.454.454 0 0 0-.315-.366c-.626-.2-1.682-.526-2.725-.802C9.491 1.71 8.51 1.5 8 1.5c-.51 0-1.49.21-2.557.491zm-.256-.966C6.23.749 7.337.5 8 .5c.662 0 1.77.249 2.813.525a61.09 61.09 0 0 1 2.772.815c.528.168.926.623 1.003 1.184.573 4.197-.756 7.307-2.367 9.365a11.191 11.191 0 0 1-2.418 2.3 6.942 6.942 0 0 1-1.007.586c-.27.124-.558.225-.796.225s-.526-.101-.796-.225a6.908 6.908 0 0 1-1.007-.586 11.192 11.192 0 0 1-2.417-2.3C2.167 10.331.839 7.221 1.412 3.024A1.454 1.454 0 0 1 2.415 1.84a61.11 61.11 0 0 1 2.772-.815z"/>
-                <path fill-rule="evenodd" d="M10.854 6.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 8.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
-              </svg>
-              {{'Terminal_Component.FormTerminal.buttonSubmit'|translate}}
-            </button> -->
+            
           </div>
 
-        <!-- </mat-card-content> -->
-
-        <!-- <div class=" mat-elevation-z8"> -->
           <mat-form-field class="filter">
             <input matInput #filter (keyup)="applyFilter($event.target.value)" placeholder="Filter">
             <button mat-icon-button matSuffix aria-label="clear" *ngIf="filter.value" (click)="filter.value=''; applyFilter('');">
               <mat-icon>close</mat-icon>
             </button>
           </mat-form-field>
-          <div class="example-table-container">
+          <div class="mat-elevation-z8">
             <table mat-table [dataSource]="dataSource"  matSort matSortActive="officeName" matSortDirection="asc" class="example-table">
               <ng-container matColumnDef="officeName" >
                 <th mat-header-cell *matHeaderCellDef  mat-sort-header>{{'Terminal_Component.FormTerminal.tableFee.Office'|translate}} </th>
@@ -211,7 +214,7 @@
                 <th mat-header-cell *matHeaderCellDef>{{'Terminal_Component.FormTerminal.tableFee.FeeCogs'|translate}}</th>
                 <td mat-cell *matCellDef="let element, let i = index">
                   <mat-form-field  >
-                    <input type="number" matInput (keyup)="validateNumber($event, element)" id="{{i}}_cogsPercentage" [value]="element.cogsPercentage" [(ngModel)]="element.cogsPercentage" [ngModelOptions]="{standalone: true}">
+                    <input type="number" matInput   id="{{i}}_cogsPercentage" [value]="element.cogsPercentage" [(ngModel)]="element.cogsPercentage" [ngModelOptions]="{standalone: true}">
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -220,7 +223,7 @@
                 <th mat-header-cell *matHeaderCellDef>{{'Terminal_Component.FormTerminal.tableFee.FeeCost'|translate}}</th>
                 <td mat-cell *matCellDef="let element , let i = index">
                   <mat-form-field floatLabel="never">
-                    <input matInput (keyup)="validateNumber($event, element)" id="{{i}}_costPercentage" [value]="element.costPercentage" [(ngModel)]="element.costPercentage" [ngModelOptions]="{standalone: true}">
+                    <input matInput  type="number" id="{{i}}_costPercentage" [value]="element.costPercentage" [(ngModel)]="element.costPercentage" [ngModelOptions]="{standalone: true}">
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -229,7 +232,7 @@
                 <th mat-header-cell *matHeaderCellDef>{{'Terminal_Component.FormTerminal.tableFee.FeeMin'|translate}}</th>
                 <td mat-cell *matCellDef="let element, let i = index">
                   <mat-form-field floatLabel="never">
-                    <input matInput (keyup)="validateNumber($event, element)" [value]="element.txnRateMin" id="{{i}}_txnRateMin" [(ngModel)]="element.txnRateMin" [ngModelOptions]="{standalone: true}">
+                    <input matInput type="number" [value]="element.txnRateMin" id="{{i}}_txnRateMin" [(ngModel)]="element.txnRateMin" [ngModelOptions]="{standalone: true}">
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -238,7 +241,7 @@
                 <th mat-header-cell *matHeaderCellDef>{{'Terminal_Component.FormTerminal.tableFee.FeeMax'|translate}}</th>
                 <td mat-cell *matCellDef="let element, let i = index">
                   <mat-form-field floatLabel="never">
-                    <input matInput (keyup)="validateNumber($event, element)" id="{{i}}_txnRateMax" [value]="element.txnRateMax" [(ngModel)]="element.txnRateMax" [ngModelOptions]="{standalone: true}">
+                    <input matInput type="number" id="{{i}}_txnRateMax" [value]="element.txnRateMax" [(ngModel)]="element.txnRateMax" [ngModelOptions]="{standalone: true}">
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -247,7 +250,7 @@
                 <th mat-header-cell *matHeaderCellDef>{{'Terminal_Component.FormTerminal.tableFee.MaxLimitAmountTransaction'|translate}} ({{'labelCurrency'|translate}})</th>
                 <td mat-cell *matCellDef="let element, let i = index">
                   <mat-form-field floatLabel="never">
-                    <input matInput  (keyup)="validateNumber($event, element)" id="{{i}}_maxLimitAmount" [value]="element.maxLimitAmount" [(ngModel)]="element.maxLimitAmount" [ngModelOptions]="{standalone: true}">
+                    <input matInput currencyMask  id="{{i}}_maxLimitAmount" [value]="element.maxLimitAmount" [(ngModel)]="element.maxLimitAmount" [ngModelOptions]="{standalone: true}">
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -256,7 +259,7 @@
                 <th mat-header-cell *matHeaderCellDef>{{'Terminal_Component.FormTerminal.tableFee.LevelTransactionCard'|translate}}</th>
                 <td mat-cell *matCellDef="let element, let i = index">
                   <mat-form-field floatLabel="never">
-                    <input matInput (keyup)="validateNumber($event, element)" id="{{i}}_levelLimit" [value]="element.levelLimit" [(ngModel)]="element.levelLimit" [ngModelOptions]="{standalone: true}">
+                    <input matInput type="number" currencyMask id="{{i}}_levelLimit" [value]="element.levelLimit" [(ngModel)]="element.levelLimit" [ngModelOptions]="{standalone: true}">
                   </mat-form-field>
                 </td>
               </ng-container>
