--- a/src/app/terminals/edit-terminals/edit-terminals.component.scss
+++ b/src/app/terminals/edit-terminals/edit-terminals.component.scss
@@ -1,18 +1,58 @@
-.container{
-    max-width: 80rem
+::ng-deep div.mat-form-field-infix{
+  width: 115px !important;;
 }
-  
-//   .example-table-container {
-//     position: relative;
-//     max-height: 600px;
-//     overflow: auto;
-//   }
-  
-  table {
-    width: 100%;
-  }
+.mat-raised-button{
+  height: max-content;
+    margin-top: 15px;
+}
+.filter {
+    padding-left: 20px;
+    width: 300px;
+}
+.activeCheckBox{
+  padding-top: 25px;
+}
 
-  td mat-form-field{
-    width: 100px ;
-    }
+table {
+  width: 100%;
+}
 
+th, td {
+  overflow: hidden;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.mat-column-Office{
+  flex: none;
+  width: 20%;
+}
+.mat-column-CardType{
+  flex: none;
+  width: 20%;
+}
+.mat-column-FeePOS{
+  flex: none;
+  width: 7%;
+}
+.mat-column-FeeCost{
+  flex: none;
+  width: 7%; 
+}
+.mat-column-FeeMin{
+  flex: none;
+  width: 7%; 
+}
+.mat-column-FeeMax{
+  flex: none;
+  width: 7%; 
+}
+.mat-column-MaxLimitAmountTransaction{
+  flex: none;
+  width: 20%; 
+}
+.mat-column-LevelTransactionCard{
+  flex: none;
+  width: 7%;
+}
