--- a/src/app/savings/saving-account-actions/savings-account-transactions/savings-account-transactions.component.html
+++ b/src/app/savings/saving-account-actions/savings-account-transactions/savings-account-transactions.component.html
@@ -53,7 +53,7 @@
                     Tạm ứng thù lao
                   </mat-option>
           </mat-select>
-          <mat-error *ngIf="savingAccountTransactionForm.controls.paymentTypeGroup.hasError('required')">
+          <mat-error *ngIf="savingAccountTransactionForm?.controls?.paymentTypeGroup?.hasError('required')">
             Payment Type group is <strong>required</strong>
           </mat-error>
         </mat-form-field>
