--- a/src/assets/styles/_calendar.scss
+++ b/src/assets/styles/_calendar.scss
@@ -4,3 +4,6 @@ mwl-calendar-month-view,mwl-calendar-week-view,mwl-calendar-day-view{
         background: rgba(86, 85, 85, 0.0);
       }
 }
+.midascalendar{
+    
+}
