add transfer to IC, move api pos
add transfer to IC, move api pos

--- a/src/app/savings/savings-account-view/form-dialog/partner-advance-cash/partner-advance-cash.component.html
+++ b/src/app/savings/savings-account-view/form-dialog/partner-advance-cash/partner-advance-cash.component.html
@@ -4,7 +4,7 @@
      fxLayoutGap.lt-md="0%">
 
   <mat-form-field class="select-book">
-    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}</mat-label>
+    <mat-label>Chọn đối tác</mat-label>
     <input required type="text" placeholder="{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}"
            matInput formControlName="partnerAdvanceCash" [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
