FIX miss identifier

--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
@@ -61,7 +61,7 @@
         [matAutocomplete]="clientsAutocomplete" />
       </mat-form-field>
 
-      <mat-autocomplete autoActiveFirstOption #clientsAutocomplete="matAutocomplete" [displayWith]="displayClient">
+      <mat-autocomplete  #clientsAutocomplete="matAutocomplete" [displayWith]="displayClient">
         <mat-option *ngFor="let client of filteredOptions | async" [value]="client">
           {{ displayClient(client) }}
         </mat-option>
