--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -109,11 +109,11 @@
   <!-- <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/terminals">
     Điều chuyển máy POS
   </button> -->
-  <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS, POS_UPDATE, POS_CREATE, POS_READ'" routerLink="/terminals/limit">{{ "Quản lý hạn mức POS" | translate }}</button>
-  <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS, POS_UPDATE, POS_CREATE, POS_READ'" routerLink="/terminals">
+  <button mat-menu-item *midasHasPermissions="['ALL_FUNCTIONS', 'POS_CREATE', 'POS_READ']; op 'OR'" routerLink="/terminals/limit">{{ "Quản lý hạn mức POS" | translate }}</button>
+  <button mat-menu-item *midasHasPermissions="['ALL_FUNCTIONS', 'POS_CREATE', 'POS_READ']; op 'OR'" routerLink="/terminals">
     {{ "Quản lý máy POS" | translate }}
   </button>
-  <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party">
+  <button mat-menu-item *midasHasPermissions="['ALL_FUNCTIONS', 'POS_CREATE']; op 'AND'" routerLink="/third-party">
     {{ "Toolbar_Component.lblThirdParty" | translate }}
   </button>
 </mat-menu>
