fix only show btn add txn on in day
fix only show btn add txn on in day

--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
@@ -67,7 +67,7 @@
         </mat-option>
       </mat-autocomplete>
 
-      <div fxFlex="10%">
+      <div fxFlex="10%" *ngIf="(today | date: 'dd/MM/yyyy') == (txnDate | date: 'dd/MM/yyyy')">
         <button
           mat-button
           type="button"
