--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -111,7 +111,7 @@
   <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals">
     {{ "Quản lý máy POS" | translate }}
   </button>
-  <button mat-menu-item *midasHasPermissions="['ALL_FUNCTIONS', 'POS_CREATE']; op 'AND'" routerLink="/third-party">
+  <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party">
     {{ "Toolbar_Component.lblThirdParty" | translate }}
   </button>
   <button mat-menu-item routerLink="/groups/spending-limit">Hạn mức chi tiêu</button>
